force-app/main/default/objects/Alquiler_de_vehiculo__c/Alquiler_de_vehiculo__c.object-meta.xml
<CustomObject>
    <label>Alquiler de vehiculo</label>
    <nameField>
        <label>Alquiler de vehiculo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alquiler de vehiculos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>