force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alquiler de vehiculos</relationshipLabel>
    <relationshipName>Alquiler_de_vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>