force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Cantidad_de_Kilometros__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Kilometros__c</fullName>
    <formula>Catindad_de_Vehiculos__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de Kilometros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>