force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Catindad_de_Vehiculos__c.field-meta.xml
<CustomField>
    <fullName>Catindad_de_Vehiculos__c</fullName>
    <label>Catindad de Vehiculos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>