force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Distancias__c.field-meta.xml
<CustomField>
    <fullName>Distancias__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distancias</label>
    <referenceTo>Distancias__c</referenceTo>
    <relationshipLabel>Alquiler de vehiculos</relationshipLabel>
    <relationshipName>Alquiler_de_vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>