force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Alquiler de vehiculos</relationshipLabel>
    <relationshipName>Alquiler_de_vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>