force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <formula>(Distancias__r.Kilometros__c  *  Vehiculo_de_Carga__r.Precio_por_Kilometro__c ) *  Catindad_de_Vehiculos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>