force-app/main/default/objects/Alquiler_de_vehiculo__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehiculo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Alquiler de vehiculos</relationshipLabel>
    <relationshipName>Alquiler_de_vehiculos</relationshipName>
    <type>Lookup</type>
</CustomField>